# ai_ml_project

./: .env.example  .gitattributes  .gitignore  ACCURAYINC_09_01_2010-EX-10.31-DISTRIBUTOR AGREEMENT_report.json  ARCHITECTURE.md  AlliedEsportsEntertainmentInc_20190815_8-K_EX-10.34_11788308_EX-10.34_Sponsorship Agreement_report.json  CLAUDE.md  CODE_ARCHITECTURE.md  CODE_README.md  LegalAgents.docx  README.md  pyproject.toml  requirements.txt  requirements_stage1_2.txt  stage1_2_baseline.py  stage1_2_evaluation.py
.github/: copilot-instructions.md
app/: main.py  streamlit_app.py
app/routers/: documents.py  pipeline.py  stage1_extract.py  stage3_agent.py  stage4_report.py
app/schemas/: domain.py  requests.py
app/services/: stage1_extract_svc.py  stage3_agent_svc.py  stage4_report_svc.py
configs/: stage3_config.yaml  stage4_config.yaml
data/faiss_index/: clauses_legalbert.json
data/output/: response_1776279917144.json  response_1776283358067.json
data/processed/: all_positive_spans.json  contract_clause_index.json  splits.json  training_dataset.json
data/reference/: clause_type_relations.json
data/reports/: DovaPharmaceuticalsInc_20181108_10_Q_EX.docx  DovaPharmaceuticalsInc_20181108_10_Q_EX.json  synthetic_demo_e2e_001.docx  synthetic_demo_report.json  synthetic_demo_report.md
data/review/: master_label_review_anushka.csv  master_label_review_rajnish.csv  master_label_review_sachin.csv  master_label_review_vishal.csv
data/synthetic/: gold_set.json
docs/: CODE_REVIEW_NOTES_2026-05-13.md  CONTRACT_SEARCH_FLOW.md  FINAL_PROJECT_REPORT.docx  HANDOFF.md  Legal_Contract_Risk_Analyzer_Project_Plan_v2.docx  Legal_Contract_Risk_Analyzer_Research_Analysis.docx  OPTIONAL_ENHANCEMENTS.md  REVIEW_REQUEST.md  STAGE1_REVIEW_NOTES.md  STAGE3_EXPERIMENTS.md  STAGE3_LABELING.md  STAGE3_LABEL_ANALYSIS.md  STAGE3_LABEL_COMPARISON.md  STAGE3_LORA_PEFT_EXPERIMENT.md  STAGE3_SYNTHETIC_LABELS_DISCUSSION.md  STAGE3_TRAINING_NOTES.md  STAGE4_DECISION_LOG.md  STAGE4_RESUME_HANDOFF.md  Stage1_2_Documentation.docx  TASK_LIST.md  dataset_insights.md
notebooks/: EXPERIMENT_NOTES.md  analyze_relabel_v2.py  plot_label_consistency.py  run22_errors.json  tokenisation.py
prompts/: stage4_resume_prompt.md
scripts/: build_clause_type_relations.py  build_contract_clause_index.py  build_faiss_index.py  build_gold_set.py  build_splits.py  build_training_dataset.py  compare_embeddings.py  download_cuad.py  eval_stage3.py  evaluate_rag.py  generate_sample_report.py  generate_synthetic_labels.py  infer.py  prepare_relabel_batch.py  quick_ablation.py  relabel_soft_labels_v2.py  run_all_audits_cli.py  run_ensemble.py  run_pipeline.py  save_relabel_results.py  show_run.py  smoke_test_stage3.py  smoke_test_stage3_agent.py  test_resume_by_stage.py  test_stage1.py  test_stage3.py  test_stage4.py
src/common/: constants.py  data_loader.py  llm_client.py  pipeline_service.py  schema.py  utils.py
src/stage1_extract_classify/: baseline.py  constants.py  evaluate.py  model.py  nodes.py  pipeline.py  preprocessing.py  tokenized_cuad.ipynb
src/stage3_risk_agent/: agent.py  embeddings.py  nodes.py  risk_classifier.py  tools.py  train.py
tests/: test_stage3.py  test_stage4.py
(+72 files in other folders)
