[project]
name = "legal-contract-risk-analyzer"
version = "0.1.0"
description = "End-to-End Legal Contract Risk Analyzer Pipeline and API"
readme = "README.md"
requires-python = ">=3.12"  # Upgraded to 3.12 to match your newer backend
dependencies = [
    # API & Core
    "fastapi>=0.135.3",
    "uvicorn>=0.43.0",
    "pydantic>=2.12.5",
    "pydantic-settings",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.33.1",
    # Orchestration & LLMs
    "langgraph>=1.1.6",
    "langchain>=1.2.15",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain-openai>=1.1.12",
    # Document Parsing
    "pymupdf>=1.26.4",
    "pdfplumber>=0.11.9",
    "docx>=0.2.4",
    "pillow>=12.2.0",
    # Machine Learning & Vector DB
    "faiss-cpu",
    "torch>=2.11.0",
    "transformers>=5.5.3",
    "accelerate>=1.13.0",
    "grandalf>=0.8",
    "uuid>=1.30",
    "langchain-ollama>=1.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]

[tool.pyright]
# Force the IDE to treat the project root as the top-level path, not just 'src/'
include = ["app", "src"]
extraPaths = ["."]
