[project]
name = "legal-contract-risk-analyzer"
version = "0.1.0"
description = "End-to-End Legal Contract Risk Analyzer Pipeline and API"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    # API & Backend
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    # Orchestration & LLM Agents
    "langgraph>=0.0.40",
    "langchain>=0.1.15",
    "langchain-community>=0.0.32",
    "langchain-core>=0.1.42",
    "langchain-openai>=0.1.3",
    "langchain-ollama>=0.1.0",
    # Core Machine Learning
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "sentence-transformers>=2.2.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "scikit-learn>=1.3.0",
    "rouge-score>=0.1.2",
    # Document Processing & Extraction
    "docling>=2.0.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "pillow>=10.0.0",
    # Utilities & Data
    "faiss-cpu>=1.7.4",
    "pandas>=2.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "grandalf>=0.8",
    "spacy>=3.7.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "streamlit>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "wandb>=0.16.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["app", "src"]
extraPaths = ["."]
